# DS-dashboard

./: .gitignore  AGENTS.md  Makefile  TODO.md  classify.py  data.db  db.py  fx.py  main.py  offline_salary_scraper.py  pyproject.toml  qol_scraper.py  salary_scraper.py  schema.sql  scrapper.py  scratchpad.md
glassdoor_offline_salaries/: Salary_ Data Scientist in Boston, MA 2026 _ Glassdoor.html  Salary_ Data Scientist in Edinburgh, Scotland 2026 _ Glassdoor.html
src/: dashboard_reader.py
src/db/: __init__.py
src/glassdoor_offline_salaries/: Salary_ Data Scientist in Dubai 2026 _ Glassdoor.html  Salary_ Data Scientist in London 2026 _ Glassdoor.html  Salary_ Data Scientist in Melbourne 2026 _ Glassdoor.html  Salary_ Data Scientist in Mumbai 2026 _ Glassdoor.html  Salary_ Data Scientist in New York, NY 2026 _ Glassdoor.html  Salary_ Data Scientist in San Francisco, CA, United States 2026 _ Glassdoor.html
src/scrapers/: fx_scraper.py  offline_salary_scraper.py  qol_scraper.py  salary_scraper.py
tests/: test_dashboard_reader.py  test_db_schema.py  test_offline_salary_scraper.py  test_qol_scraper.py  test_salary_scraper.py  test_smoke_imports.py
