[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "prettyprint>=0.1.5",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "rich>=14.3.2",
]
